syntax = "proto3" ;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true ;
option java_package = "billing" ;

service PatientInfoService {
  rpc GetPatientInformation(PatientInfoRequest) returns (PatientInfoResponse) ;
}

message PatientInfoRequest{
  string patientId =1 ;
}

message PatientInfoResponse{
  string id = 1;
  string name = 2;
  string email = 3;
  string address = 4;
  google.protobuf.Timestamp date_of_birth = 5;
  google.protobuf.Timestamp registration_date = 6;
}